<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseOpponentScreen"
    android:orientation="vertical"
    >

    <Button
        android:onClick="homebuttonclick"
        android:id="@+id/button_home"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_opponent"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human"
            android:textSize="30sp"
            android:layout_marginEnd="100dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai"
            android:textSize="30sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <ImageView
            android:id="@+id/picture_human"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/person"
            android:layout_marginEnd="10dp"
            />

        <ImageView
            android:id="@+id/picture_AI"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/artificialintelligence"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_go"
        android:onClick="gobuttonclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/go"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

    </LinearLayout>

</LinearLayout>