<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    tools:context=".HowToPlayScreen">

    <Button
        android:onClick="homebuttonclick"
        android:id="@+id/button_home"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/home"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:textSize="60sp"
                android:text="@string/how_to_play"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_are_given_two_boards"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/stratboard"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/attkboard"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="75dp"
                    android:textColor="@color/black"
                    android:text="@string/strategy_board"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/attack_board"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/first_place_your_fleet"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="150dp"
                    android:src="@drawable/fleet"/>

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/stratboardwships"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/next_exchange_attacks"
                android:textColor="@color/black"
                android:textAlignment="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/attackchosen"/>

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/launchingmissile"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/after_you_launch_an_attack"
                android:textColor="@color/black"
                android:textAlignment="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/attackhit"/>

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/attackmiss"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/your_goal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/conqueror"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>