<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/white">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_the_battle"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:src="@drawable/battleship"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"

                android:textColor="@color/black"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:id="@+id/username_text_field_design"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/Username"
                    android:textColorHint="@color/common_google_signin_btn_text_light">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/textview_border"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:id="@+id/email_text_field_design"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/Email"
                    android:textColorHint="@color/common_google_signin_btn_text_light">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/textview_border"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:id="@+id/password_text_field_design"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint= "@color/black"
                    android:hint="@string/Password"
                    android:textColorHint="@color/common_google_signin_btn_text_light">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/textview_border"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:onClick="signupbuttonclick"
                android:layout_width="185dp"
                android:layout_height="48dp"
                android:backgroundTint="#000000"
                android:text="@string/Done"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"/>

            <Button
                android:onClick="loginbuttonclick"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:text="@string/already_have_an_account_login"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>